# megajuggler

./: .editorconfig  .gitignore  .repomixignore  README.md  biome.jsonc  justfile  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: README.md  package.json  vite.config.ts
apps/web/src/lib/: TrickCard.svelte  progress.test.ts  progress.ts  tricks.test.ts  tricks.ts
apps/web/src/routes/: +page.svelte
apps/web/static/data/: tricks.json
