[project]
name = "megajuggler-workspace"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/megajuggler"
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.12"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = [
  "packages/megajuggler/src",
  "packages/megajuggler/tests"
]
exclude = ["data", ".venv"]
